# AI_emotion

./: PPT_6-8分钟答辩大纲.md  README.md  build-profile.json5  build_output.txt
.claude/: settings.local.json
AppScope/: app.json5
docs/api/: auth.md
docs/architecture/: deployment.md  operations.md
entry/src/main/: module.json5
infra/docker/: Dockerfile.ai-engine  Dockerfile.core-api  Dockerfile.core-api-java  Dockerfile.ts-api  docker-compose.yml
infra/sql/: 001_init_core_tables.sql  002_auth_improvements.sql  002_seed_config.sql  003_accounts_privacy_posts.sql
scripts/: add-firewall-rule.ps1  db_init.ps1  dev.ps1  smoke_test.ps1  smoke_test.py  start-backend-simple.ps1  start-backend.ps1  start-backend.sh  start-core-api-java.ps1  status-backend.ps1  stop-backend.ps1  test-connection.ps1
services/ai-engine/: .gitignore  README.md  config.py  main.py  requirements.txt  start_fixed.py
services/ai-engine/providers/: asr_provider.py  (+2 more)
services/core-api/: .env  Cargo.toml  README.md
services/core-api-flask/: app.py
services/core-api-java/: pom.xml
services/core-api/src/: config.rs  error.rs  main.rs
services/core-api/src/handlers/: auth.rs  chat.rs  devices.rs  emotions.rs  health.rs  letters.rs  mod.rs  recommendations.rs  voice.rs  ws_sync.rs
services/core-api/src/models/: chat.rs  device.rs  emotion.rs  letter.rs  mod.rs  user.rs  voice.rs
services/core-api/src/services/: ai_client.rs  mod.rs
services/python-tools/: emotion_analysis.py  requirements.txt  voice_process.py
services/ts-api/: .env  package-lock.json  package.json  tsconfig.json
(+112 files in other folders)
